force-app/main/default/objects/CommercientSF__SalBranch__c/CommercientSF__SalBranch__c.object-meta.xml
<CustomObject>
    <label>Syspro AR Branch</label>
    <nameField>
        <label>Syspro AR Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro AR Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>