force-app/main/default/objects/CommercientSF__SalBranch__c/fields/branchaddr0build__c.field-meta.xml
<CustomField>
    <fullName>branchaddr0build__c</fullName>
    <label>branchaddr0build</label>
    <length>255</length>
    <type>Text</type>
</CustomField>