force-app/main/default/objects/CommercientSF__SalBranch__c/fields/branchaddr2loc__c.field-meta.xml
<CustomField>
    <fullName>branchaddr2loc__c</fullName>
    <label>BranchAddr2Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>