force-app/main/default/objects/CommercientSF__SalBranch__c/fields/branchaddr3country__c.field-meta.xml
<CustomField>
    <fullName>branchaddr3country__c</fullName>
    <label>BranchAddr3Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>