force-app/main/default/objects/CommercientSF__SalBranch__c/fields/branchgpslat__c.field-meta.xml
<CustomField>
    <fullName>branchgpslat__c</fullName>
    <label>BranchGpsLat</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>