force-app/main/default/objects/CommercientSF__SalBranch__c/fields/branchgpslong__c.field-meta.xml
<CustomField>
    <fullName>branchgpslong__c</fullName>
    <label>BranchGpsLong</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>