force-app/main/default/objects/CommercientSF__SalBranch__c/fields/branchpostalcode__c.field-meta.xml
<CustomField>
    <fullName>branchpostalcode__c</fullName>
    <label>BranchPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>