force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__Branch__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Branch__c</fullName>
    <externalId>true</externalId>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>