force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__BranchAddr2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BranchAddr2__c</fullName>
    <label>Branch address line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>