force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__BranchAddr3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BranchAddr3__c</fullName>
    <label>Branch address line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>