force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__CosCtlAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CosCtlAcc__c</fullName>
    <label>Branch cost of sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>