force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__DepositAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DepositAcc__c</fullName>
    <label>Deposits revenue account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>