force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__Description__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Description__c</fullName>
    <label>Branch description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>