force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__FinChargeAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FinChargeAcc__c</fullName>
    <label>Sales finance charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>