force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__FrtCosAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FrtCosAcc__c</fullName>
    <label>Cost of sales freight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>