force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__FrtSalesAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FrtSalesAcc__c</fullName>
    <label>Sales freight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>