force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__FstAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FstAcc__c</fullName>
    <label>Federal sales tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>