force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextCreditDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextCreditDisc__c</fullName>
    <label>Next credit note no for discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>