force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextDebitDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextDebitDisc__c</fullName>
    <label>Next debit note no for discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>