force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextDebitNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextDebitNote__c</fullName>
    <label>Next debit note number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>