force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextInvoice__c</fullName>
    <label>Next invoice number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>