force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextRma__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextRma__c</fullName>
    <label>Next RMA number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>