force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextSalesOrder__c</fullName>
    <label>Next S/order number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>