force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__NextSoCrNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextSoCrNote__c</fullName>
    <label>Next credit note number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>