force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__PrefixNextInv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrefixNextInv__c</fullName>
    <label>Prefix for Next invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>