force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__PrefixNextRma__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrefixNextRma__c</fullName>
    <label>Prefix for next RMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>