force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__PrefixNextSo__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrefixNextSo__c</fullName>
    <label>Prefix for Next S/order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>