force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__RoundingAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RoundingAcc__c</fullName>
    <label>Sales rounding error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>