force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__SalesCtlAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesCtlAcc__c</fullName>
    <label>Branch A/R control account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>