force-app/main/default/objects/CommercientSF__SalBranch__c/fields/CommercientSF__SalesTaxAcc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesTaxAcc__c</fullName>
    <label>Sales tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>