force-app/main/default/objects/CommercientSF__SalBranch__c/fields/nextquote__c.field-meta.xml
<CustomField>
    <fullName>nextquote__c</fullName>
    <label>NextQuote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>