force-app/main/default/objects/CommercientSF__SalBranch__c/fields/quoteprefix__c.field-meta.xml
<CustomField>
    <fullName>quoteprefix__c</fullName>
    <label>QuotePrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>