force-app/main/default/objects/CommercientSF__SalBranch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CommercientSF__Branch__c</columns>
    <columns>CommercientSF__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>